# tpu-sdk-cv180x-ppocr

./: .gitignore  README.md  compile_sample_porgram.sh  compile_sample_runner.sh  compile_sample_runner_all.sh
cvimodels/: chocr_rec_bf16.info  chocr_rec_int8.info  ppocr_mb_cls.cvimodel  ppocr_mb_cls_int8.cvimodel  ppocr_mb_cls_int8.info  ppocr_mb_det.cvimodel  ppocr_mb_det_int8.cvimodel  ppocr_mb_det_int8.info  ppocr_mb_rec_bf16.info  ppocr_mb_rec_mix.cvimodel  ppocr_mb_rec_mix.info  ppocr_mb_rec_mix_fine.info  ppocrv2_det.cvimodel  ppocrv2_det_int8.cvimodel  ppocrv2_det_int8.info  ppocrv2_det_int8_320.cvimodel  ppocrv2_det_int8_320.info  ppocrv2_det_int8_480.cvimodel  ppocrv2_det_int8_480.info  ppocrv2_rec_bf16.info  ppocrv3_det_int8.info  ppocrv3_rec_bf16.info  ppocrv3_rec_mix.info  ppocrv4_det_int8.info
samples/chocr_rec/: CMakeLists.txt  README.md  chocr_rec.cpp
samples/myocr_sys/: CMakeLists.txt  README.md  myocr_sys.cpp
samples/myocr_sys_many/: CMakeLists.txt  README.md  convert_results.py  myocr_sys_many.cpp
samples/ppocr_cls/: CMakeLists.txt  README.md  ppocr_cls.cpp
samples/ppocr_det/: CMakeLists.txt  README.md  ppocr_det.cpp
samples/ppocr_rec/: CMakeLists.txt  README.md  ppocr_rec.cpp
samples/ppocr_sys/: CMakeLists.txt  README.md  ppocr_sys.cpp
samples/ppocr_sys_many/: CMakeLists.txt  README.md  convert_results.py  ppocr_sys_many.cpp
